; ModuleID = '/home/carl/AnghaBench/linux/drivers/fsi/extr_fsi-scom.c___put_scom.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/fsi/extr_fsi-scom.c___put_scom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scom_device = type { i32 }

@SCOM_DATA0_REG = common dso_local global i32 0, align 4
@SCOM_DATA1_REG = common dso_local global i32 0, align 4
@SCOM_WRITE_CMD = common dso_local global i32 0, align 4
@SCOM_CMD_REG = common dso_local global i32 0, align 4
@SCOM_STATUS_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scom_device*, i32, i32, i32*)* @__put_scom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__put_scom(%struct.scom_device* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.scom_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.scom_device* %0, %struct.scom_device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %13 = load i32, i32* %7, align 4
  %14 = ashr i32 %13, 32
  %15 = call i32 @cpu_to_be32(i32 %14)
  store i32 %15, i32* %10, align 4
  %16 = load %struct.scom_device*, %struct.scom_device** %6, align 8
  %17 = getelementptr inbounds %struct.scom_device, %struct.scom_device* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @SCOM_DATA0_REG, align 4
  %20 = call i32 @fsi_device_write(i32 %18, i32 %19, i32* %10, i32 4)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %4
  %24 = load i32, i32* %12, align 4
  store i32 %24, i32* %5, align 4
  br label %65

25:                                               ; preds = %4
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @cpu_to_be32(i32 %26)
  store i32 %27, i32* %10, align 4
  %28 = load %struct.scom_device*, %struct.scom_device** %6, align 8
  %29 = getelementptr inbounds %struct.scom_device, %struct.scom_device* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @SCOM_DATA1_REG, align 4
  %32 = call i32 @fsi_device_write(i32 %30, i32 %31, i32* %10, i32 4)
  store i32 %32, i32* %12, align 4
  %33 = load i32, i32* %12, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %25
  %36 = load i32, i32* %12, align 4
  store i32 %36, i32* %5, align 4
  br label %65

37:                                               ; preds = %25
  %38 = load i32, i32* @SCOM_WRITE_CMD, align 4
  %39 = load i32, i32* %8, align 4
  %40 = or i32 %38, %39
  %41 = call i32 @cpu_to_be32(i32 %40)
  store i32 %41, i32* %10, align 4
  %42 = load %struct.scom_device*, %struct.scom_device** %6, align 8
  %43 = getelementptr inbounds %struct.scom_device, %struct.scom_device* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = load i32, i32* @SCOM_CMD_REG, align 4
  %46 = call i32 @fsi_device_write(i32 %44, i32 %45, i32* %10, i32 4)
  store i32 %46, i32* %12, align 4
  %47 = load i32, i32* %12, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %37
  %50 = load i32, i32* %12, align 4
  store i32 %50, i32* %5, align 4
  br label %65

51:                                               ; preds = %37
  %52 = load %struct.scom_device*, %struct.scom_device** %6, align 8
  %53 = getelementptr inbounds %struct.scom_device, %struct.scom_device* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = load i32, i32* @SCOM_STATUS_REG, align 4
  %56 = call i32 @fsi_device_read(i32 %54, i32 %55, i32* %11, i32 4)
  store i32 %56, i32* %12, align 4
  %57 = load i32, i32* %12, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %61

59:                                               ; preds = %51
  %60 = load i32, i32* %12, align 4
  store i32 %60, i32* %5, align 4
  br label %65

61:                                               ; preds = %51
  %62 = load i32, i32* %11, align 4
  %63 = call i32 @be32_to_cpu(i32 %62)
  %64 = load i32*, i32** %9, align 8
  store i32 %63, i32* %64, align 4
  store i32 0, i32* %5, align 4
  br label %65

65:                                               ; preds = %61, %59, %49, %35, %23
  %66 = load i32, i32* %5, align 4
  ret i32 %66
}

declare dso_local i32 @cpu_to_be32(i32) #1

declare dso_local i32 @fsi_device_write(i32, i32, i32*, i32) #1

declare dso_local i32 @fsi_device_read(i32, i32, i32*, i32) #1

declare dso_local i32 @be32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
